# cmake-vcpkg-poco-example

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
example1/: CMakeLists.txt  main.cpp
example2/: CMakeLists.txt  main.cpp
